Refactor RoomUsage model and controller for improved data handling
- Updated RoomUsageController to use path variables for room details retrieval.
- Changed RoomUsage model to replace availability map with a structured Usage class containing course details.
- Enhanced RoomUsageRepository with a new method for finding rooms by building and room name.
- Refactored RoomUsageService to improve room availability checks and added logging for better debugging.